[project]
name = "montage-is-open"
version = "0.2"
description = "AI Video Production Pipeline Orchestrator"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jsonschema>=4.20",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "requests>=2.31",
    "piper-tts>=1.4",
    "diffusers>=0.25.0",
    "transformers>=4.40",
    "torch==2.5.1",
    "accelerate>=0.30",
    "safetensors>=0.4",
]

[project.scripts]
main = "main:main"
list = "list:main"
init = "init:main"
status = "status:main"
stage = "stage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["*.py", "custom_tools/"]

[tool.uv]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
